<resources>
    <string name="app_name">CoAlarm</string>
    <string name="kakao_app_key">596a3dcf3171d701925ddd8667f0ccb1</string>
    <string name="schedule">Schedule</string>
    <string name="title">Title</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="Categories">Categories</string>
    <string name="cycle">Cycle</string>
    <string name="min">minute</string>
    <string name="message">Message</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="save">save</string>
    <string name="coalarm_register">CoAlarm Sign Up</string>
    <string name="sns_register">SNS Register</string>
    <string name="register">Register</string>
    <string name="coalarm_login">Coalarm Login</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sns_login">SNS Login</string>
    <string name="logout">Logout</string>
    <string name="mobile">Phone</string>
    <string name="email">E-mail</string>
    <string name="id_check">Check</string>
    <string name="pw_check">Confirm Password</string>
    <string name="modifymember">Modify member info</string>
    <string name="confirm">Confirm</string>
    <string name="remove_account">Account cancellation</string>
    <string name="kakao_img">kakao_img_en</string>
    <string name="my_page">My page</string>
    <string name="home">HOME</string>
    <string name="schedule_regi">Register schedule</string>
    <string name="allLogout">Logout</string>
    <string name="Recipient">Recipient</string>
    <string name="ADD">ADD</string>
    <string name="DELETE">DELETE</string>
    <string name="StandardMessage">StandardMessage</string>
    <string name="ScenarioNumber">ScenarioNumber</string>
    <string name="Immediately">Immediately</string>
    <string name="Regular">Regular</string>
    <string name="schedule_inquiry">Inquiry schedule</string>
    <string name="schedule_history">Schedule history</string>
    <string name="success_status">Success status</string>
    <string name="end_status">End status</string>
    <string name="individual">Individuals</string>
    <string name="paid_individual">Paid individuals</string>
    <string name="employee">Employees</string>
    <string name="enterprise">Enterprises</string>
    <string name="message_information">Message Information</string>
    <string name="message_code">Message code</string>
    <string name="message_format">Message format</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="execute">Execute</string>
    <string name="cancel">Cancel</string>
    <string name="inquiry">Inquiry</string>
    <string name="use_status">Use</string>
    <string name="sort_message">Please select member type.</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="Dialing">Dialing</string>
    <string name="answer">Answer</string>
    <string name="StartDate">StartDate</string>
    <string name="EndDate">EndDate</string>
    <string name="status">Status</string>
    <string name="SendDate">SendDate</string>
    <string name="CompletionStatus">Completion Status</string>
    <string name="STOP">STOP</string>
    <string name="Schedule_status">Schedule status</string>
    <string name="my_schedule">My schedule</string>
    <string name="registerMsg">register</string>
    <string name="msg_info">Message Info</string>
    <string name="nickname">Nickname</string>
    <string name="birthday">Birthday</string>
    <string name="auth">Auth</string>
    <string name="authentication">Authentication code</string>
    <string name="use_yn">USE</string>
    <string name="section">Categories</string>
    <string name="Every_year">Every year</string>
    <string name="month_after_month">month after month</string>
    <string name="Every_week">Every week</string>
    <string name="Everyday">Everyday</string>
    <string name="every_minute">every minute</string>
    <string name="every_day_of_the_week">every day of the week</string>
    <string name="OK">OK</string>
    <string name="Recent_outgoing_details">Recent outgoing details</string>
    <string name="ongoing_details_in_progress">ongoing details in progress</string>
    <string name="Reservation">Reservation</string>
    <string name="agreeTerms">I agree to the Terms and Conditions.</string>
    <string name="agreeTerms2">Terms and Conditions</string>
    <string name="seeMore">See More...</string>
    <string name="authConfirm">Confirm</string>
    <string name="Result">Result</string>
    <string name="Reservation_details">Reservation details</string>
    <string name="exec_datetime">exec datetime</string>
</resources>