<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userID2"
        android:layout_width="342dp"
        android:layout_height="400dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/shape_edit_button"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="12.5dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/coalarm_register"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/kakao_signup_en"
        android:textAllCaps="false"
        android:textColor="#F6F6F6"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/authCode"
        app:layout_constraintTop_toBottomOf="@+id/authCode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_button"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/button"
        android:text="@string/auth"
        android:textAllCaps="false"
        android:textColor="#F6F6F6"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/userPhone"
        app:layout_constraintStart_toEndOf="@+id/userPhone"
        app:layout_constraintTop_toTopOf="@+id/userPhone" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_edit_button"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="12.5dp"
        app:layout_constraintStart_toStartOf="@+id/userID2"
        app:layout_constraintTop_toBottomOf="@+id/userID2" />

    <EditText
        android:id="@+id/authCode"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_button"
        android:ems="10"
        android:hint="@string/authentication"
        android:inputType="phone"
        android:padding="12.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userPhone"
        app:layout_constraintTop_toBottomOf="@+id/userPhone" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/authConfirm"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/button"
        android:text="@string/authConfirm"
        android:textAllCaps="false"
        android:textColor="#F6F6F6"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/authCode"
        app:layout_constraintStart_toEndOf="@+id/authCode"
        app:layout_constraintTop_toTopOf="@+id/authCode"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <CheckBox
        android:id="@+id/agreeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:text="@string/agreeTerms"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/userID2"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/userID2"
        app:layout_constraintTop_toTopOf="@+id/userID2" />

    <TextView
        android:id="@+id/seeMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/seeMore"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@+id/userID2"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="@+id/userID2"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/agreeTerms2"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="@+id/userID2"
        app:layout_constraintStart_toStartOf="@+id/userID2"
        app:layout_constraintTop_toTopOf="@+id/userID2" />

</androidx.constraintlayout.widget.ConstraintLayout>