<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/exec_datetime"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/DateStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/TimeStart"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="19dp"
        android:layout_weight="2"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#F6F6F6"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DateStart"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/DateStart"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="2"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="#F6F6F6"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/TimeStart"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/Recent_outgoing_details"
        android:textColor="#000000"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17">

                <TableRow
                    android:layout_width="380dp"
                    android:layout_height="match_parent"
                    android:background="#5B9BD5"
                    android:padding="1dp">

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:background="#5B9BD5"
                        android:gravity="center_horizontal"
                        android:text="@string/exec_datetime"
                        android:textColor="#FDFDFD"

                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:background="#5B9BD5"
                        android:gravity="center_horizontal"
                        android:text="@string/Result"
                        android:textColor="#FDFDFD"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#5B9BD5"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:text="@string/message"
                        android:textColor="#FDFDFD"
                        android:textSize="17sp" />
                </TableRow>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:layout_constraintTop_toBottomOf="@+id/tableTh">

                    <TableLayout
                        android:id="@+id/tableLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="1dp"
                        app:layout_constraintTop_toBottomOf="@+id/tableTh"></TableLayout>
                </ScrollView>
            </TableLayout>

        </HorizontalScrollView>




    </LinearLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Reservation_details"
        android:textColor="#000000"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/message"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textColor="#F6F6F6"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sPhone" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button"
        android:text="@string/cancel"
        android:textColor="#F6F6F6"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Recipient"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/sPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/sPhone"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="21dp"
        android:layout_weight="1"
        android:background="@drawable/shape_edit_button"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="206dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/schedule_border"
            >

            <EditText
                android:id="@+id/message"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edit_button"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="302dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/delete_message"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="171dp"
        android:background="@drawable/button"
        android:text="메세지 삭제"
        android:textColor="#F6F6F6"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>